root/static/css/style.css
pre, .diff-header, .diff-ul li {
    font-family: Consolas, 'Bitstream Vera Sans Mono', 'Courier New', Courier, monospace;
}

/* Tables still need 'cellspacing="0"' in the markup. */
table {
    border-collapse: separate;
    border-spacing: 0;
}
/* float:none prevents the span-x classes from breaking table-cell display */
caption, th, td {
    text-align: left;
    font-weight: normal;
    float: none !important;
}

table, th, td {
    vertical-align: middle;
}

/* Remove possible quote marks (") from <q>, <blockquote>. */
blockquote:before, blockquote:after, q:before, q:after {
    content: '';
}

blockquote, q {
    quotes: "" "";
}

/* Remove annoying border on linked images. */
a img {
    border: none;
}

button, body {
    font-family: Arial,Helvetica,sans-serif;
}

legend {
    padding: 5px;
    font-size: 1.1em;
    font-weight: bold;
}

fieldset {
    border: 1px solid #E9E9E9;
}

label span {
    display: inline-block;
    width: 125px;
    text-overflow: ellipsis;
    white-space: nowrap;
}

label span img {
    padding: 2px;
    padding-right: 5px;
    float: left;
}

label input[type="text"], label select {
    width: 200px;
}

.strong {
    font-weight: bold;
}

.big-logo {
    margin: 42px auto 44px auto;
    display: block;
    width: 326px;
    height: 59px;
    background: transparent url('/static/images/metacpan-logo.png') no-repeat;
}

.small-logo {
    position: relative;
    margin: 1px 13px 0 0;
    float: left;
    width: 180px;
    height: 33px;
    background: transparent url('/static/images/metacpan-logo.png') no-repeat 0px -59px;
}

@media (-webkit-min-device-pixel-ratio: 2),
       (-moz-min-device-pixel-ratio: 2),
       (-o-min-device-pixel-ratio: 2/1),
       (min-device-pixel-ratio: 2) {

    .big-logo, .small-logo {
        background-image: url('/static/images/metacpan-logo@2x.png');
        background-size: 326px;
    }
}

button.favorite, a.favorite {
    padding: 1px 3px;
    margin-left: 5px;
    font-size: 0.9em;
    background-color: #fff;
    opacity: 0.5;
    -webkit-border-radius: 3px 3px;
    -moz-border-radius: 3px 3px;
    border-radius: 3px 3px;
    border: solid 1px #666;
    color: #333;
    text-decoration: none;
    display: inline-block;
    line-height: 1;
    text-align: right;
    min-width: 25px;
    position: relative;
    top: -1px;
}

/* Counter-act .breadcrumbs a */
.breadcrumbs a.favorite, .breadcrumbs button.favorite {
    font-size: 0.85em;
    font-weight: normal;
}

.breadcrumbs .favorite span {
    font-weight: normal;
}

button.favorite {
    min-width: 35px;
    cursor: pointer;
}

button.favorite.highlight, a.favorite.highlight {
    background-color: #fca216;
    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ffc874), to(#fca216));
    background: -moz-linear-gradient(#ffc874,#fca216);
    color: #fff;
    text-shadow: 0px 1px 1px #333;
    border-color: #d39534;
    opacity: 1;
}

button.favorite:hover, button.favorite.active, a.favorite.active, a.favorite:hover {
    background-color: #36C;
    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#69F), to(#36C));
    background: -moz-linear-gradient(#69F,#36C);
    color: #fff;
    text-shadow: 0px 1px 1px #333;
    border-color: #36C;
    opacity: 1;
    text-decoration: none;
}

.user-profiles > a {
    text-decoration: none;
}

.account-settings, .about {
    border-left: none;
}

#content {
    padding: 10px;
}

ul {
    list-style-type: none;
}

.comment {
    color: #999;
    font-size: 0.8em;
    padding-right: 15px;
}

.select-text {
    -moz-user-select: all;
    -ms-user-select: all;
    -webkit-user-select: all;
    user-select: all;
}

a.ellipsis {
    width: 160px;
}

.ellipsis {
    white-space: nowrap;
    display: block;
    overflow: hidden;
}

code {
    font-family: monospace;
}

.olControlAttribution {
    bottom: 0em !important;
}

body div.qtip div.content {
    padding: 0;
    margin: 0;
    height: auto;
    min-height: auto;
    width: auto;
    min-width: auto;
}

.ui-tooltip, .qtip {
    font-size: 12px;
    max-width: 800px;
}

.ui-tooltip-content {
    padding: 0;
}

div.qtip-github table {
    width: 100%;
}

div.qtip-github table td, div.qtip-github table th {
    padding: 3px;
    border: 1px solid #F1F1F1;
}

div.qtip-github table th {
    padding-right: 8px;
    white-space: nowrap;
    background-color: #F9F9F9;
}

.file-table .mtime, .file-table .size {
    width: 110px;
    font-size: 1em;
}

.file-table .documentation {
    width: 300px;
    font-size: 1em;
}

.file-table td.mtime, .release-table td.date {
    text-align: right;
}

.file-table .name a {
    display: inline-block;
}

.search-results .description {
    color: #999;
    max-height: 3em;
    overflow: hidden;
}

.rating-00, .rating-05, .rating-10, .rating-15, .rating-20, .rating-25, .rating-30, .rating-35, .rating-40, .rating-45, .rating-50 {
    width: 67px;
    height: 12px;
    display: inline-block;
    background: url(/static/images/stars-sprite-white.png);
    vertical-align: bottom;
    margin-bottom: 4px;
}

.rating-05 {
    background-position: 0px -19px;
}

.rating-10 {
    background-position: 0px -38px;
}

.rating-15 {
    background-position: 0px -57px;
}

.rating-20 {
    background-position: 0px -76px;
}

.rating-25 {
    background-position: 0px -95px;
}

.rating-30 {
    background-position: 0px -114px;
}

.rating-35 {
    background-position: 0px -133px;
}

.rating-40 {
    background-position: 0px -152px;
}

.rating-45 {
    background-position: 0px -171px;
}

.rating-50 {
    background-position: 0px -190px;
}

/* Contributors list on release pages
* see /release/Plack for example
*/

#contributors .contributor {
    position: relative;
    text-align: left;
    padding-left: 22px;
}

#contributors .contributor.gravatar img {
    left: 0;
    position: absolute;
}

#contributors .contributor * {
    vertical-align: top;
}

.smaller {
    font-size: 1.0em;
    line-height: 2.5em;
}

/*Home page*/
#link_to_task_kensho {
    width: 27em;
    padding: 5px 0px 5px 0px;
    border-radius: 7px;
    margin-top: 5px;
    background-color: rgba(196, 226, 241, 0.4);
    border-color: #4E9DAD;
    color: #4083A3;
}

#link_to_task_kensho a {
    color: #3a87ad;
}

#header-text-noresult {
    padding-left: 0px;
    font-size: 14px;
}

.news_feed {
    float: right;  
}

#icon-rss {
    background: url('/static/icons/icon-rss.png');
}

